--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,6 +1,9 @@
 @import 'Reset';
 @import 'Body';
+@import 'Notifications';
 @import 'Navbar';
 @import 'GameBoard';
 @import 'Keyboard';
 @import 'Modals';
+@import 'modals/StatisticsModal';
+@import 'modals/SettingsModal';
