--- a/src/scss/_Body.scss
+++ b/src/scss/_Body.scss
@@ -1,20 +1,42 @@
+@import 'Colors';
 
 #root {
   height: 100%;
 }
 
 body {
-    background: #010d16;
-    color: #FFF;
-    font-family: 'Lato', sans-serif;
-    overflow: hidden;
-  }
-  
-  .App {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-  }
+  background: $body-bg;
+  color: #FFF;
+  font-family: 'Lato', sans-serif;
+  overflow: hidden;
+}
+
+a, a:visited {
+  margin: 0 0.2rem;
+  text-decoration: none;
+  color: $btn-bg;
+}
+
+a:hover, a:focus, a:active {
+  color: $btn-bg-hover;
+}
+
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  width: 1rem;
+  height: 1rem;
+}
