--- a/src/scss/_GameBoard.scss
+++ b/src/scss/_GameBoard.scss
@@ -1,3 +1,5 @@
+@import 'Colors';
+
 .game-board {
     width: 100%;
     max-width: 600px;
@@ -18,23 +20,23 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            border: solid 2px #1a374c;
+            border: solid 2px $empty-cell-border-color;
             user-select: none;
             border-radius: 3px;
 
             &.correct {
-                background: #509b49;
-                border: solid 2px #5fb457;
-                box-shadow: 0px 0px 10px 0px rgba(44,190,88,1);
+                background: $correct-background-color;
+                border: solid 2px $correct-border-color;
+                box-shadow: 0px 0px 10px 0px $correct-glow-color;
             }
 
             &.missed {
-                background: #B59F3B;
-                border: solid 2px #dbbd39;
+                background: $missed-background-color;
+                border: solid 2px $missed-border-color;
             }
 
             &.wrong {
-                background: #122a3b;
+                background: $wrong-background-color;
             }
         }
 
