--- a/src/scss/_Keyboard.scss
+++ b/src/scss/_Keyboard.scss
@@ -1,3 +1,5 @@
+@import 'Colors';
+
 .keyboard-container {
     position: relative;
     z-index: 10;
@@ -28,31 +30,31 @@
             cursor: pointer;
 
             &.correct {
-                background: #509b49;
-                color: #dbeed9;
-                border: solid 2px #5fb457;
-                box-shadow: 0px 0px 10px 0px rgba(44,190,88,1);
+                background: $correct-background-color;
+                color: $correct-key-color;
+                border: solid 2px $correct-border-color;
+                box-shadow: 0px 0px 10px 0px $correct-glow-color;
             }
     
             &.missed {
-                background: #B59F3B;
-                color: #e6e0c8;
-                border: solid 2px #dbbd39;
+                background: $missed-background-color;
+                color: $missed-key-color;
+                border: solid 2px $missed-border-color;
             }
     
             &.wrong {
-                background: #122a3b;
-                color: #759fbd;
+                background: $wrong-background-color;
+                color: $wrong-key-color;
             }
 
             &.enter {
                 padding: 0 10px;
-                background: #606060;
+                background: $important-key-color;
             }
 
             &.back {
                 padding: 0 10px;
-                background: #606060;
+                background: $important-key-color;
 
                 & img {
                     width: 2rem;
@@ -67,36 +69,14 @@
         z-index: 11;
         width: 100%;
         height: 100%;
-        background: rgba(1,13,22,0.5);
+        background: rgba($body-bg, 0.5);
         display: flex;
         flex-direction: column;
         gap: 20px;
         justify-content: center;
         align-items: center;
-        color: #FFF;
+        color: $game-over-text-color;
         font-size: 2rem;
         font-weight: bold;
-
-        & .btn {
-            background: #3f7a37;
-            color: #d6e3eb;
-            border-radius: 3px;
-            padding: 15px 30px;
-            cursor: pointer;
-            font-size: 1.2rem;
-            font-weight: bold;
-            display: flex;
-            gap: 5px;
-
-            &:hover {
-                background: #4f9246;
-                color: #FFF;
-            }
-
-            & img {
-                width: 1.2rem;
-                height: 1.2rem;
-            }
-        }
     }
 }
