--- a/src/scss/_Modals.scss
+++ b/src/scss/_Modals.scss
@@ -14,6 +14,8 @@
     display: none;
     width: 100%;
     max-width: 400px;
+    max-height: 100%;
+    overflow-y: auto;
     padding-bottom: 10px;
     margin: 2px;
     position: relative;
@@ -42,7 +44,7 @@
     & .title {
       width: 100%;
       background: $modal-title-bg-color;
-      padding: 50px 0;
+      padding: 2rem 0;
       font-size: 2rem;
       font-weight: bold;
       text-shadow: 0 0 25px #000;
