--- a/src/scss/_Colors.scss
+++ b/src/scss/_Colors.scss
@@ -6,14 +6,19 @@ $navbar-border-color: #0e2535;
 
 /*  Gameboard  */
 $empty-cell-border-color: #1a374c;
+$empty-cell-border-color-hc: #727272;
 $correct-background-color: #509b49;
+$correct-background-color-hc: #9c5d22;
 $correct-border-color: #5fb457;
 $correct-glow-color: rgba(44,190,88,1);
 $missed-background-color: #B59F3B;
+$missed-background-color-hc: #39649c;
 $missed-border-color: #dbbd39;
 $wrong-background-color: #122a3b;
+$wrong-background-color-hc: #464646;
 
 /*  Keyboard  */
+$key-color: #757575;
 $correct-key-color: #dbeed9;
 $missed-key-color: #e6e0c8;
 $wrong-key-color: #759fbd;
