--- a/src/scss/_GameBoard.scss
+++ b/src/scss/_GameBoard.scss
@@ -5,6 +5,8 @@
     max-width: 600px;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    justify-content: center;
 
     & .game-row {
         display: flex;
