--- a/src/scss/_GameBoard.scss
+++ b/src/scss/_GameBoard.scss
@@ -57,7 +57,7 @@
                     box-shadow: 0px 1px 10px 0px $correct-glow-color;
                 }
                 80% {
-                    box-shadow: 0px 1px 11px 0px $correct-glow-color;
+                    box-shadow: 0px 1px 8px 0px $correct-glow-color;
                 }
                 100% {
                     box-shadow: 0px 0px 12px 0px $correct-glow-color;
@@ -103,32 +103,28 @@
                 filter: blur(0);
             }
             20% {
-                transform: translate(1.5rem,1rem);
-                filter: blur(1px);
+                transform: translate(1rem,0.5rem);
             }
             30% {
                 transform: translate(0,0);
                 filter: blur(0);
             }
             40% {
-                transform: translate(-1rem,-1rem);
-                filter: blur(1px);
+                transform: translate(-0.6rem,-0.5rem), scale(5);
             }
             50% {
                 transform: translate(0,0);
                 filter: blur(0);
             }
             60% {
-                transform: translate(1rem,1rem);
-                filter: blur(2px);
+                transform: translate(0.5rem,0.5rem);
             }
             70% {
                 transform: translate(0,0);
                 filter: blur(0);
             }
             80% {
-                transform: translate(-1.5rem,1rem);
-                filter: blur(5px);
+                transform: translate(-1rem,0.5rem);
             }
             100% {
                 transform: translate(0,0);
